--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -2,4 +2,34 @@
 {%block content%}
     <h1>Record page</h1>
 
+
+    <div class="card">
+        <div class="card-header">
+           <h3><strong> {{customer_record.first_name}}
+                    {{customer_record.last_name}}
+           </strong></h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text">
+            <p><strong>Email: </strong>{{customer_record.email}}</p>
+            <p><strong>Address: </strong>{{customer_record.address}}</p>
+            <p><strong>City: </strong>{{customer_record.city}}</p>
+            <p><strong>State: </strong>{{customer_record.state}}</p>
+            <p><strong>Zipcode: </strong>{{customer_record.zipcode}}</p>
+            <p><strong>Created At: </strong>{{customer_record.created_at }}</p>
+            <p><strong>Id: </strong>{{customer_record.id }}</p>
+          </p>
+          <a href="{%url 'home'%}" class="btn btn-secondary">Back</a>
+          <a href="{%url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+        </div>
+        
+      </div>
+
+
+
+
+
+        
+
+
 {%endblock%}
