--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -28,7 +28,7 @@
     {%if records%}
       {%for record in records%}
       <tr>
-        <td>{{record.first_name}}</td>
+        <td><a href="{% url 'record' record.id %}">{{record.first_name}}</a></td>
         <td>{{record.last_name}}</td>
         <td>{{record.email}}</td>
         <td>{{record.address}}</td>
@@ -36,7 +36,7 @@
         <td>{{record.state}}</td>
         <td>{{record.zipcode}}</td>
         <td>{{ record.created_at }}</td>
-        <td><a href="{% url 'record' record.id %}">{{record.id }}</a></td>
+        <td>{{record.id }}</a></td>
       </tr>
        
       {%endfor%}
