--- a/website/templates/update_record.html
+++ b/website/templates/update_record.html
@@ -1,15 +1,17 @@
-{% extends 'base.html'%}
+{%extends 'base.html'%}
+
 {%block content%}
 <div class="col-md-6 offset-md-3">
     {%if user.is_authenticated%}
     <h1> Add Record</h1>
-    <form method="POST" action="">
+    <form method="POST">
          {% csrf_token%}
          {{form.as_p}}
-         <button type="submit" class="btn btn-secondary">Submit</button>
+         <button type="submit" class="btn btn-secondary">Update Record</button>
 
 
     </form>
     {%endif %}
 </div>
+
 {%endblock%}
